<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsCard">

    <LinearLayout
        android:id="@+id/lay_cards"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_details"
            android:gravity="center"/>

        <EditText
            android:id="@+id/cc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_card"
            android:inputType="number"
            android:maxLength="4"
            android:layout_below="@+id/heading"/>

        <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_below="@+id/card"/>

        <EditText
            android:id="@+id/cc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/next"
            android:inputType="number"
            android:hint="@string/enter_card"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_below="@+id/card"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/cc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/next"
            android:inputType="number"
            android:hint="@string/enter_card"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_below="@+id/card"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/cc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/next"
            android:inputType="number"
            android:hint="@string/enter_card"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_card"
            android:layout_below="@+id/card"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_cards"
        android:text="+"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:gravity="center"
        android:layout_margin="@dimen/padding10dp"
        android:layout_below="@+id/next_card_name"/>

</RelativeLayout>